--- a/styles.css
+++ b/styles.css
@@ -1,393 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap');
-
-:root {
-    --darkgrey: #15202A;
-    --grey: #969696;
-    --white: #FFFFFF;
-    --blue: hsl(223, 87%, 63%, 100%);
-    --bluehover: hsl(223, 87%, 63%, 80%);
-    --blueborder: hsl(223, 87%, 63%, 15%);
-    --lightblue: #C2D3FF;
-    --red: #FF5466;
-}
-
-.clean-transition {
-    -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -o-transition: none !important;
-    -ms-transition: none !important;
-    transition: none !important
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-    min-width: 0;
-    min-height: 0;
-}
-
-html {
-    height: 100%;
-    font-size: 62.5%;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: auto;
-    overflow-wrap: break-word;
-    overflow: auto;
-}
-
-body {
-    display: flex;
-    align-items: center;
-    min-height: 100%;
-    margin: 0 auto;
-    padding: 0;
-    font-size: 1.6rem;
-    font-family: 'Libre Franklin', sans-serif;
-    text-align: center;
-    background-color: var(--background);
-    overflow-x: hidden;
-}
-
-/* LOADER */
-
-.loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 1;
-    visibility: visible;
-    background-color: #FFFFFF;
-    transition: visibility .4s 0s, opacity .4s, background-color .6s ease-in-out;
-    z-index: 1000;
-}
-
-.loader-logo {
-    animation: .6s 1 both fadeOutUp;
-    animation-delay: 1.2s;
-}
-
-@keyframes fadeOutUp {
-    from {
-        opacity: 1
-    }
-
-    to {
-        opacity: 0;
-        -webkit-transform: translate3d(0, -100%, 0);
-        -moz-transform: translate3d(0, -100%, 0);
-        transform: translate3d(0, -100%, 0)
-    }
-}
-
-.loader-dots {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    overflow: hidden;
-    animation: .6s 1 both fadeOutDown;
-    animation-delay: 1.2s;
-}
-
-@keyframes fadeOutDown {
-    from {
-        opacity: 1
-    }
-
-    to {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 100%, 0);
-        -moz-transform: translate3d(0, 100%, 0);
-        transform: translate3d(0, 100%, 0)
-    }
-}
-
-.loader-dots span {
-    height: 8px;
-    width: 8px;
-    margin: 5px;
-    /*border-radius: 50%;*/
-    background-color: #4F7DF3;
-    animation: fade 1s infinite;
-}
-
-.loader-dots span:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.loader-dots span:nth-child(2) {
-    animation-delay: .1s;
-}
-
-.loader-dots span:nth-child(3) {
-    animation-delay: .2s;
-}
-
-@keyframes fade {
-    0% {
-        opacity: 0
-    }
-
-    50% {
-        opacity: .8
-    }
-
-    100% {
-        opacity: 0
-    }
-}
-
-.loaded.loader {
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.8s ease-out;
-}
-
-/* */
-
-main {
-    max-width: 69.6rem;
-    width: 100%;
-    padding: 0 2.8rem;
-    margin: 5rem auto;
-}
-
-img {
-    height: auto;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-img,
-b {
-    display: block;
-}
-
-h2 {
-    position: relative;
-    display: inline;
-    font-size: 3.2rem;
-    text-transform: uppercase;
-}
-
-h2::before {
-    content:'';
-    display: block;
-    position:absolute;
-    bottom:0.8rem;
-    right:-0.8rem;
-    height:0.6rem;
-    width: 0.6rem;
-    background-color: var(--blue);
-    border-radius: 0.1rem;
-}
-
-h1 {
-    color: var(--grey);
-    font-size: 4.8rem;
-    font-weight: 300;
-    margin: 4rem 0 1.6rem 0;
-}
-
-h1>span {
-    color: var(--darkgrey);
-    font-weight: 700;
-}
-
-p {
-    color: var(--darkgrey);
-    font-size: 2rem;
-}
-
-form {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    margin: 2rem 0 0 0;
-}
-
-input {
-    position: relative;
-    height: 5.6rem;
-    width: 100%;
-    padding: 1.8rem 3rem;
-    font-family: 'Libre Franklin', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 300;
-    border: 1px solid var(--lightblue);
-    border-radius: 2.8rem;
-    background-color: transparent;
-    outline: none;
-    overflow: hidden;
-}
-
-input::-webkit-input-placeholder {
-    color: var(--lightblue);
-}
-
-input::-moz-placeholder {
-    color: var(--lightblue);
-}
-
-input:-ms-input-placeholder {
-    color: var(--lightblue);
-}
-
-input:-moz-placeholder {
-    color: var(--lightblue);
-}
-
-.error small, .success small {
-    position: absolute;
-    bottom: -2rem;
-    left: 3rem;
-    display: block;
-    color: var(--red);
-    font-size: 1.2rem;
-    font-style: italic;
-    margin-top: 0.5rem;
-    text-align: left;
-}
-
-.success small {
-    color:green;
-}
-
-button {
-    height: 5.6rem;
-    width: 100%;
-    max-width: 20rem;
-    margin-left: 1.6rem;
-    padding: 0;
-    border: inherit;
-    border-radius: 6rem;
-    font-family: 'Libre Franklin', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 600;
-    color: #fff;
-    background-color: var(--blue);
-    box-shadow: 0 0.5rem 1rem 0.2rem rgba(76, 123, 243, 0.23);
-    transition: all 0.2s ease;
-    outline: none;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: var(--lightblue);
-}
-
-section img {
-    margin: 7.2rem 0;
-}
-
-ul {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-ul li+li {
-    margin-left: 1.2rem;
-}
-
-ul li a {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 3.2rem;
-    width: 3.2rem;
-    border: 0.1rem solid var(--blueborder);
-    border-radius: 3.2rem;
-    transition: all 0.3s ease-out;
-}
-
-ul li:hover a {
-    border: 0.1rem solid var(--blue);
-    background-color: var(--blue);
-}
-
-ul li:hover svg {
-    fill: #fff;
-}
-
-.copyright {
-    display: block;
-    color: var(--grey);
-    font-size: 1.2rem;
-    font-weight: 300;
-    margin-top: 2.5rem;
-}
-
-@media screen and (max-width: 768px) {
-
-    form {
-        flex-direction: column;
-    }
-
-    .error small, .success small {
-        position: initial;
-        text-align: center;
-    }
-
-    button {
-        max-width: initial;
-        margin-left: initial;
-        margin-top: 2rem;
-    }
-
-}
-
-@media screen and (max-width: 580px) {
-
-    h2 {
-        font-size: 2rem;
-    }
-
-    h2:before {
-        height:0.4rem;
-        width: 0.4rem;
-        bottom:0.5rem;
-        right:-0.6rem;
-    }
-
-    h1 {
-        font-size: 2.2rem;
-    }
-
-    p {
-        font-size: 1.2rem;
-    }
-
-    input {
-        height: 4rem;
-        font-size: 1.2rem;
-        padding: 1rem 3rem;
-    }
-
-    .error small, .success small {
-        font-size: 1rem;
-    }
-
-    button {
-        height: 4rem;
-        font-size: 1.2rem;
-    }
-
-    .copyright {
-        font-size: 1rem;
-        margin: 2.5rem 0 0 0;
-    }
-}
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap');:root{--darkgrey:#15202A;--grey:#969696;--white:#FFFFFF;--blue:hsl(223, 87%, 63%, 100%);--bluehover:hsl(223, 87%, 63%, 80%);--blueborder:hsl(223, 87%, 63%, 15%);--lightblue:#C2D3FF;--red:#FF5466;}.clean-transition{-webkit-transition:none !important;-moz-transition:none !important;-o-transition:none !important;-ms-transition:none !important;transition:none !important}*,*::before,*::after{box-sizing:border-box;min-width:0;min-height:0;}html{height:100%;font-size:62.5%;-webkit-tap-highlight-color:transparent;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:auto;overflow-wrap:break-word;overflow:auto;}body{display:flex;align-items:center;min-height:100%;margin:0 auto;padding:0;font-size:1.6rem;font-family:'Libre Franklin', sans-serif;text-align:center;background-color:var(--background);overflow-x:hidden;}.loader{display:flex;justify-content:center;align-items:center;position:fixed;top:0;right:0;left:0;bottom:0;height:100%;width:100%;opacity:1;visibility:visible;background-color:#FFFFFF;transition:visibility .4s 0s, opacity .4s, background-color .6s ease-in-out;z-index:1000;}.loader-logo{animation:.6s 1 both fadeOutUp;animation-delay:1.2s;}@keyframes fadeOutUp{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(0, -100%, 0);-moz-transform:translate3d(0, -100%, 0);transform:translate3d(0, -100%, 0)}}.loader-dots{display:flex;justify-content:center;margin-top:10px;overflow:hidden;animation:.6s 1 both fadeOutDown;animation-delay:1.2s;}@keyframes fadeOutDown{from{opacity:1}to{opacity:0;-webkit-transform:translate3d(0, 100%, 0);-moz-transform:translate3d(0, 100%, 0);transform:translate3d(0, 100%, 0)}}.loader-dots span{height:8px;width:8px;margin:5px;background-color:#4F7DF3;animation:fade 1s infinite;}.loader-dots span:nth-child(1){animation-delay:0s;}.loader-dots span:nth-child(2){animation-delay:.1s;}.loader-dots span:nth-child(3){animation-delay:.2s;}@keyframes fade{0%{opacity:0}50%{opacity:.8}100%{opacity:0}}.loaded.loader{visibility:hidden;opacity:0;transition:all 0.8s ease-out;}main{max-width:69.6rem;width:100%;padding:0 2.8rem;margin:5rem auto;}img{height:auto;max-width:100%;margin:0 auto;}img,b{display:block;}h2{position:relative;display:inline;font-size:3.2rem;text-transform:uppercase;}h2::before{content:'';display:block;position:absolute;bottom:0.8rem;right:-0.8rem;height:0.6rem;width:0.6rem;background-color:var(--blue);border-radius:0.1rem;}h1{color:var(--grey);font-size:4.8rem;font-weight:300;margin:4rem 0 1.6rem 0;}h1>span{color:var(--darkgrey);font-weight:700;}p{color:var(--darkgrey);font-size:2rem;}form{position:relative;display:flex;justify-content:center;margin:2rem 0 0 0;}input{position:relative;height:5.6rem;width:100%;padding:1.8rem 3rem;font-family:'Libre Franklin', sans-serif;font-size:1.6rem;font-weight:300;border:1px solid var(--lightblue);border-radius:2.8rem;background-color:transparent;outline:none;overflow:hidden;}input::-webkit-input-placeholder{color:var(--lightblue);}input::-moz-placeholder{color:var(--lightblue);}input:-ms-input-placeholder{color:var(--lightblue);}input:-moz-placeholder{color:var(--lightblue);}.error small, .success small{position:absolute;bottom:-2rem;left:3rem;display:block;color:var(--red);font-size:1.2rem;font-style:italic;margin-top:0.5rem;text-align:left;}.success small{color:green;}button{height:5.6rem;width:100%;max-width:20rem;margin-left:1.6rem;padding:0;border:inherit;border-radius:6rem;font-family:'Libre Franklin', sans-serif;font-size:1.6rem;font-weight:600;color:#fff;background-color:var(--blue);box-shadow:0 0.5rem 1rem 0.2rem rgba(76, 123, 243, 0.23);transition:all 0.2s ease;outline:none;cursor:pointer;}button:hover{background-color:var(--lightblue);}section img{margin:7.2rem 0;}ul{display:flex;justify-content:center;margin:0;padding:0;list-style-type:none;}ul li+li{margin-left:1.2rem;}ul li a{position:relative;display:flex;flex-direction:column;justify-content:center;align-items:center;height:3.2rem;width:3.2rem;border:0.1rem solid var(--blueborder);border-radius:3.2rem;transition:all 0.3s ease-out;}ul li:hover a{border:0.1rem solid var(--blue);background-color:var(--blue);}ul li:hover svg{fill:#fff;}.copyright{display:block;color:var(--grey);font-size:1.2rem;font-weight:300;margin-top:2.5rem;}@media screen and (max-width:768px){form{flex-direction:column;}.error small, .success small{position:initial;text-align:center;}button{max-width:initial;margin-left:initial;margin-top:2rem;}}@media screen and (max-width:580px){h2{font-size:2rem;}h2:before{height:0.4rem;width:0.4rem;bottom:0.5rem;right:-0.6rem;}h1{font-size:2.2rem;}p{font-size:1.2rem;}input{height:4rem;font-size:1.2rem;padding:1rem 3rem;}.error small, .success small{font-size:1rem;}button{height:4rem;font-size:1.2rem;}.copyright{font-size:1rem;margin:2.5rem 0 0 0;}}
